src/test/ui/macros/issue-54441.stderr
error: expected one of `async`, `const`, `crate`, `extern`, `fn`, `pub`, `static`, `type`, or `unsafe`, found keyword `let`
  --> $DIR/issue-54441.rs:3:9
   |
LL |         let
   |         ^^^ expected one of 9 possible tokens
...
LL |     m!();
   |     ----- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

